[package]
name = "ecr-token-refresher"
version = "0.1.0"
edition = "2021"

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_22"]
deprecated = ["kube/deprecated-crd-v1beta1", "k8s-openapi/v1_21"]

[dependencies.aws-config]
version = "0.9.0"

[dependencies.aws-sdk-ecr]
version = "0.9.0"

[dependencies.aws-types]
version = "0.9.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.5"
features = ["env-filter"]

[dependencies.base64]
version = "0.13.0"

[dependencies.k8s-openapi]
version = "0.14.0"
default-features = false

[dependencies.kube]
version = "0.70.0"

[dependencies.anyhow]
version = "1.0.56"

[dependencies.tower]
version = "0.4.12"

[dependencies.hyper]
version = "0.14.18"

[dependencies.serde_json]
version = "1.0.79"

